turmites.lessons.turmites.helloturmite.HelloTurmite.scala.code
var state = 0;
var triplet = Array[Int](3)
def step(colors:Array[Color], rule:Array[Array[Array[Int]]] ) {
	triplet = rule(state)(IndiceCouleur)
	var IndiceCouleur:Int=0
	while (colors(IndiceCouleur)!=getCouleurSol()) {
		IndiceCouleur+=1
	}
	setCouleurBrosse(triplet(0))
	baisseBrosse()
	leveBrosse()
     triplet(1) match {
     	case 0 =>
     	case 1 => avance()
     	case 2 => gauche()
     			avance()
     	case 4 =>	gauche()
     			gauche()
     			avance()
     	case 8 => droite()
     			avance()
     }
     state=triplet(3)
}
